--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+node_modules
+.idea
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -45,3 +47,4 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.idea/workspace.xml
