--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "node-inspector": "^0.12.5",
+    "socket.io": "^1.4.3",
     "underscore": "^1.8.3"
   }
 }
